src/test/deca/syntax/valid/testClassDeclaration.deca
// Declare a class
// Result : OK

class A {
    // This is a class 
}
