src/test/deca/syntax/invalid/testNoSemi.deca
// Declare a variable without a semi
// Result : Error
{
    int x
}
